objects/tffa__Employment__c.object
<CustomObject>
    <description>Captures employment information of the applicant. Employment is a relationship between two parties, usually based on a contract where work is paid for, where one party, which may be a corporation, for profit, not-for-profit organization, co-operative or other entity is the employer and the other is the employee.</description>
    <fields>
        <fullName>OccupationType__c</fullName>
        <description>Occupation of the candidate</description>
        <label>OccupationType</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Occupation</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__Address__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Employment address</description>
        <label>Address</label>
        <referenceTo>tffa__Address__c</referenceTo>
        <relationshipLabel>Employments</relationshipLabel>
        <relationshipName>Employments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tffa__Bonus__c</fullName>
        <description>Employers have the opportunity to distribute bonus pay randomly as the company can afford to pay employees a bonus or the amount of the bonus pay can be specified by a contract.</description>
        <label>Bonus</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>tffa__Commission__c</fullName>
        <description>Commission as an extra incentive. Many industries, such as retail, utilise a system whereby employees are paid an hourly wage or annual salary but also have the ability to earn greater amounts through a commission scheme which pays a percentage of the employees&apos; sales</description>
        <label>Commission</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>tffa__EmployeeCompositeAddress__c</fullName>
        <description>Employee Composite address in a single line</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Employee Composite address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__EmployeeName__c</fullName>
        <description>The name of the employee.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Employee Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__EmployeeVerificationStatus__c</fullName>
        <description>Employee Verification status</description>
        <label>Employee Verification Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__EmploymentVerificationStatus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__EmployerIdentificationNumber__c</fullName>
        <description>The Employer Identification Number (EIN), also known as the Federal Employer Identification Number (FEIN) or the Federal Tax Identification Number, is a unique nine-digit number assigned by the Internal Revenue Service (IRS) to business entities operating in the United States for the purposes of identification.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Employer identification number (EIN)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__EmployerName__c</fullName>
        <description>The name of the company where the person is employed. Apple, Google etc.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Employer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__EmployerRelationshipIndicator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When true, indicates that the borrower is employed by a family member, property seller, real estate agent/broker, or other party to the transaction.</description>
        <label>Employer relationship indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__EndDate__c</fullName>
        <description>The date on which the person left the job. This could be blank if the employment is current. The date here is a ISO 8601 string in the format YYYY-MM-DD</description>
        <encryptionScheme>None</encryptionScheme>
        <label>End date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>tffa__ExternalId__c</fullName>
        <description>External id as referred by external system</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>tffa__IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if the object is marked for delete.</description>
        <label>Is Deleted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__MilitaryStatusType__c</fullName>
        <description>A value from a MISMO prescribed list that specifies duty status of current or former military personnel.</description>
        <label>Military status type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__MilitaryStatusType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__MonthlyIncome__c</fullName>
        <description>The monthly total amount for the specified Income Item</description>
        <label>Monthly income</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>tffa__MonthsEmployed__c</fullName>
        <description>The total number of complete months the applicant has been employed in the line of work or type of business.</description>
        <label>Months employed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__Occupation__c</fullName>
        <description>The industry or the function of the employment. For example, Mining, Marketing, Software are potential occupations</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Occupation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__One__c</fullName>
        <description>Power of One, Useful for reporting</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Power of One, Useful for reporting</inlineHelpText>
        <label>One</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__Overtime__c</fullName>
        <description>Overtime laws require employers to pay employees a wage rate that is greater than their regular rate for hours worked beyond a designated threshold.</description>
        <label>Overtime</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>tffa__OwnershipInterestType__c</fullName>
        <description>Specifies the percentage of the total business of the borrower&apos;s self-owned business.</description>
        <label>Ownership interest type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__OwnershipInterestType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__OwnershipShare__c</fullName>
        <description>Percentage of Ownership share</description>
        <label>Ownership share</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>tffa__Party__c</fullName>
        <description>Reference to party object</description>
        <label>Party</label>
        <referenceTo>tffa__Party__c</referenceTo>
        <relationshipLabel>Employments</relationshipLabel>
        <relationshipName>Employments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>tffa__PrefillSource__c</fullName>
        <description>The source of employment prefill data, for example it could be a linkedin handle</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Prefill source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__Prefilled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>true, if employment details was prefilled from emplopyment sources like linkedIn</description>
        <label>Prefilled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__SortOrder__c</fullName>
        <description>Controls the relative order of the item in a list.</description>
        <label>Sort Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__SpousalVABenefitsEligibilityIndicator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When true, indicates that the individual is a surviving spouse of a Veteran who served and was Missing In Action (MIA) /Killed In Action (KIA), a Veteran who died of a condition or impairment connected to his/her service in the Armed Forces (as determined by VA or DoD), or a Veteran whose service connected disability/impairment, they believe, entitles them to benefits from the VA.</description>
        <label>Spousal veteran benefits indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__StartDate__c</fullName>
        <description>The date on which the person started the job. The date here is a ISO 8601 string in the format YYYY-MM-DD</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Start date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>tffa__Status__c</fullName>
        <description>Indicates status if the employment</description>
        <label>Employment status type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__EmploymentStatusType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__Title__c</fullName>
        <description>The designation of the employee. Could be Senior Manager, Director, VP etc.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__TotalDeduction__c</fullName>
        <description>Any Deduction information found on a paystub.</description>
        <label>Total Deductions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>tffa__Type__c</fullName>
        <description>Type of the employment</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__EmploymentType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__VerificationStatus__c</fullName>
        <description>Employment Verification status</description>
        <label>Verification Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__EmploymentVerificationStatus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__YearsEmployed__c</fullName>
        <description>The total number of complete years the applicant has been employed in the line of work or type of business.</description>
        <label>Years employed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Employment</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Employment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Employments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>